add responsive content, sidebar and footer

--- a/DAY6/index.html
+++ b/DAY6/index.html
@@ -57,13 +57,13 @@
                 </main>
                 <aside class="sidebar">
                     <div class="widget">
-                        <!-- <h3>follow us</h3>
+                        <h3>follow us</h3>
                         <ul>
                             <li><a href="">facebook</a></li>
                             <li><a href="">inatagram</a></li>
                             <li><a href="">twitter</a></li>
-                        </ul> -->
-                        <img src="https://i.pinimg.com/736x/29/41/b0/2941b0a266c0fc1cb388429315b9ccf9.jpg" alt="">
+                        </ul>
+                        <!-- <img src="https://i.pinimg.com/736x/29/41/b0/2941b0a266c0fc1cb388429315b9ccf9.jpg" alt=""> -->
                     </div>
                 </aside>
             </section>
