--- a/DAY5/index.html
+++ b/DAY5/index.html
@@ -49,20 +49,17 @@
                 <main class="content">
                     <h1>CUTE CATS</h1>
                     <h5>meow meow meow</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur 
-                        adipisicing elit. Possimus culpa labore dolorum 
-                        ea? Velit eligendi magnam sit beatae aperiam rem 
-                        veritatis maxime. Unde pariatur repudiandae iste 
-                        ipsam modi. Sunt, molestiae.</p>
+                    <p>meow meow meow meeowww wi wi wi wi meow owa owa owa owa wa wa wa mi mi mi mi miii mi mi mi</p>
                 </main>
                 <aside class="sidebar">
                     <div class="widget">
-                        <h3>follow us</h3>
+                        <!-- <h3>follow us</h3>
                         <ul>
                             <li><a href="">facebook</a></li>
                             <li><a href="">inatagram</a></li>
                             <li><a href="">twitter</a></li>
-                        </ul>
+                        </ul> -->
+                        <img src="https://i.pinimg.com/736x/29/41/b0/2941b0a266c0fc1cb388429315b9ccf9.jpg" alt="">
                     </div>
                 </aside>
             </section>
@@ -72,6 +69,15 @@
                     <a href="/media/cutecat.jpg" height="30px" width="30px"></a>
                     <h3>address</h3>
                     <address>Lorem ipsum, dolor sit amet </address>
+                </div>
+                <div class="footer-widget">
+                    <h4>site-map</h4>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="#">Photos</a></li>
+                    </ul>
                 </div>
                 <div class="footer-widget">
                     <h4>site-map</h4>
