--- a/DAY9/index.html
+++ b/DAY9/index.html
@@ -20,14 +20,11 @@
     <header class="header">
         <div class="banner">
             <img src="/media/mountain.jpg" alt="">
-        </div>
-        <div class="text">
+            <div class="text">
             <h2>WELCOME TO</h2>
             <h1>AUTHENTIK.</h1>
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-        </div>
-        <div class="text2">
-            <h2>start her</h2>
+            <h4><em>Lorem ipsum dolor sit amet consectetur adipisicing elit.</em></h4>
+            <h3>start here</h3>
             <a href="">learn more</a>
         </div>
     </header>
