--- a/DAY9/index.html
+++ b/DAY9/index.html
@@ -23,11 +23,35 @@
             <div class="text">
             <h2>WELCOME TO</h2>
             <h1>AUTHENTIK.</h1>
-            <h4><em>Lorem ipsum dolor sit amet consectetur adipisicing elit.</em></h4>
-            <h3>start here</h3>
+            <h4>start here</h4>
             <a href="">learn more</a>
         </div>
     </header>
+    <section class="content">
+        <div class="heading">
+            <h2>Start your journey</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus id,<br>
+                 laborum iste exceptur. Lorem ipsum dolor sit amet, consecghk  keia euhc ioask bdeua ashdei</p>
+            <div class="card-holder">
+                <div class="card">
+                    <img src="/media/icons8-trees-100.png" alt="">
+                    <h5>Be Inspired</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor voluptates quis natus est cupiditate doloremque quo maxime recusandae quas harum, obcaecati distinctio voluptatibus error. Inventore fuga repellat totam maiores placeat!</p>
+                </div>
+                <div class="card">
+                    <img src="/media/icons8-direction-64.png" alt="" class="abs">
+                    <h5>Get Connected</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus ut expedita vel facilis aut rem harum modi inventore, vitae, nemo in praesentium iste deserunt accusantium fugiat. Quia debitis aliquam facere!</p>
+                </div>
+                <div class="card">
+                    <img src="/media/icons8-trekking-bag-58.png" alt="" class="abs">
+                    <h5>Equip Yourself</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis quis ipsa temporibus? Earum, impedit est harum eaque hic veritatis qui dolor nam quae vitae. Ratione vel perferendis fugit in eveniet?</p>
+                </div>
+            </div>
+            <a href="">Take the first step today →</a>
+        </div>
+    </section>
     </div>
 </body>
 </html>
